
2004-04-14	Joel Becker <joel.becker@oracle.com>

	* tools/asmtool.c: Add rename by name.
	
2004-04-13	Joel Becker <joel.becker@oracle.com>

	* kernel/oracleasm.c: Add a FIXME.
	* tools/asmtool.c: Add rename of a disk by device.

2004-03-26	Joel Becker <joel.becker@oracle.com>

	* vendor/unitedlinux/Makefile: Remove the version-specific
		specfiles.
	* vendor/unitedlinux/oracleasm-2.4.21-%.spec.in: Removed
	* vendor/unitedlinux/oracleasm-2.4.21.spec-generic.in: Added
	* configure.in: Bump to 1.0.2, change specfile outputs.
	* Makefile: Remove ul10 stuff, add new dynamic specfile bits.

2004-03-24	Joel Becker <joel.becker@oracle.com>

	* *: Tag 1.0.1.

2004-03-02	Joel Becker <joel.becker@oracle.com>

	* include/linux/asmdisk.h: Make asmdisk_toupper() handle *
		properly.

2004-02-25	Joel Becker <joel.becker@oracle.com>

	* include/linux/asmdisk.h: Evil case-insensitive stuff.
	* include/linux/asmerror.h: Invalid discovery strings.
	* tools/asmtool.c: Evil case-insensitive stuff.
	* documents/asm-install.txt: Updated to reflect allcaps.
	* vendor/redhat/oracleasm.init.in: Uppercase.
	* vendor/unitedlinux/oracleasm.init.in: Uppercase.
	* vendor/common/oracleasm.init.functions: upper_disk().

2004-02-25	Joel Becker <joel.becker@oracle.com>

	* configure.in: 1.0.1 version
	* vendor/redhat/oracleasm.init.in: RHEL3 firewire kernels.

2004-02-02	Joel Becker <joel.becker@oracle.com>

	* Going to tag.

2004-01-29	Joel Becker <joel.becker@oracle.com>

	* configure.in: Not supporting <SP3.
	* vendor/unitedlinux/Makefile: Not supporting <SP3.
	* vendor/common/oracleasm-support.spec.in: Comment about UL
		kernel paths.
	* vendor/{redhat,unitedlinux}/oracleasm-*.spec.in: Bump
		required support_ver to 1.0.0.

2004-01-28	Joel Becker <joel.becker@oracle.com>

	* vendor/unitedlinux/oracleasm-2.4.19*: Not supporting <SP3.

2004-01-28	Joel Becker <joel.becker@oracle.com>

	* configure.in: Make 1.0.0.

2004-01-28	Joel Becker <joel.becker@oracle.com>
